--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-Author: Tom Huntsman, CPO
+<!-- Author: Tom Huntsman, CPO -->
+
+<div class="body-container">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <header class="header-container">
+    <h1> 5 reasons why<br />Leah should hire Tom 📈</h1>
+  </header>
+  <div class="main-content">
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span> 
+        <span class="dot" onclick="currentSlide(2)"></span> 
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+      </div>
+    <div class="software-slider">
+      <div class="slideshow-container">
+        <div class="mySlides fade">
+          <img src="http://tommyhuntsman.com/unnamed-1.jpg" style="width:100%">
+          <div class="text">&#127756; Product Vision </div>
+          <div class="text2">I would be living my dream to help lead the management of digital products at aspen ski co :) <br><br>I've been involved in the Colorado ski industry for 30 years. I started skiing at age 2. I've seen the market change over the past 3 decades and I can see big changes ahead. I couldn't think of a more natural advantage to help steward the digital product development of Aspen Ski Co to capitalize on this evolving industry. </div>
+        </div>
+        <div class="mySlides fade">
+          <img src="http://tommyhuntsman.com/unnamed-2.jpg" style="width:100%">
+          <div class="text">&#128197; Opportune Time</div>
+          <div class="text2">I'm ready to move home from California to be with family young and old :) <br><br>Over the past 4 years I have been fortunate to find the career I love. I've met some remarkable achievments in my digital products growth. I'm ready to return home and spend time with my family while continueing to master my </div>
+        </div>
+        <div class="mySlides fade">
+          <img src="http://tommyhuntsman.com/unnamed-13.jpg" style="width:100%">
+          <div class="text">&#128241; Digital Product Skills</div>
+        </div>
+        <div class="mySlides fade">
+          <img src="http://tommyhuntsman.com/unnamed-13.jpg" style="width:100%">
+          <div class="text">&#9935;Long Trajectory </div>
+        </div>
+        <div class="mySlides fade">
+          <img src="http://tommyhuntsman.com/unnamed-13.jpg" style="width:100%">
+          <div class="text">&#128156; Team</div>
+        </div>
+        <a class="prev" onclick="plusSlides(-1)"></a>
+        <a class="next" onclick="plusSlides(1)"></a>
+      </div>
+    </div>
+  </div>
+</div>
