--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- Author: Tom Huntsman, CPO -->
-
+<!DOCTYPE html>
+<html>
 <div class="body-container">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,3 +46,4 @@
     </div>
   </div>
 </div>
+</html>
