--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <div class="body-container">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <header class="header-container">
     <h1> 5 reasons why<br />Leah should hire Tom 📈</h1>
