--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
   </head>
   <header class="header-container">
     <h1> 5 reasons why<br />Leah should hire Tom 📈</h1>
