--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="mySlides fade">
           <img src="http://tommyhuntsman.com/unnamed-13.jpg" style="width:100%">
-          <div class="text">&#9935;Long Trajectory </div>
+          <div class="text">&#9935; Long Term Trajectory </div>
         </div>
         <div class="mySlides fade">
           <img src="http://tommyhuntsman.com/unnamed-13.jpg" style="width:100%">
