--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
   </head>
-  <header class="header-container">
-    <h1> 5 reasons why<br />Leah should hire Tom 📈</h1>
+   <header class="header-container">
+    <h1> 5 reasons why<br />we would be great ⚡ </h1>
   </header>
   <div class="main-content">
     <div style="text-align:center">
@@ -22,30 +22,32 @@
       <div class="slideshow-container">
         <div class="mySlides fade">
           <img src="http://tommyhuntsman.com/unnamed-1.jpg" style="width:100%">
-          <div class="text">&#127756; Product Vision </div>
-          <div class="text2">I would be living my dream to help lead the management of digital products at aspen ski co :) <br><br>I've been involved in the Colorado ski industry for 30 years. I started skiing at age 2. I've seen the market change over the past 3 decades and I can see big changes ahead. I couldn't think of a more natural advantage to help steward the digital product development of Aspen Ski Co to capitalize on this evolving industry. </div>
+          <div class="text">&#127756; Vision </div>
+          <div class="text2">The more I think about your question, the more I realize, in 5 years, I want to be helping you lead the management of digital products at aspen ski co :)<br><br>I've been involved in the Colorado ski industry for 30 years. I started skiing at age 2. I've seen the industry change over the past 3 decades and I can see big changes ahead. I couldn't think of a more natural advantage to help steward the digital product development of Aspen Ski Co and to capitalize on this evolving industry.<br><br>Even if now isn't the right time for us to work together, I have to thank you for creating the digital team at ASC because it has helped me realize the type of software I would thrive working on.<br><br>This is why I want to join your team, to help you exceed your guest expectations and anticipate market forces.</div>
+        </div>
+        <div class="mySlides fade">
+          <img src="http://tommyhuntsman.com/skills.png" style="width:100%">
+          <div class="text">&#128241; Skills</div>
+          <div class="text2">Perhaps the main reason you want me as your Digital PM is the skills I bring to the table. From strategy and design to engineering and deployment, I've had success delivering measurable results. I have extensive experience with enterprise CMS and CRM platforms. I've managed a number of agile development projects. I've grown digital products DAUs, conversions, and profits because of user research, backlog prioritization, development organization, and business understanding. <br><br> This is why I want to join your team, to help you grow the KPI's and OKR's that are important to you, your team, and the entire ASC organization.</div>
         </div>
         <div class="mySlides fade">
           <img src="http://tommyhuntsman.com/unnamed-2.jpg" style="width:100%">
-          <div class="text">&#128197; Opportune Time</div>
-          <div class="text2">I'm ready to move home from California to be with family young and old :) <br><br>Over the past 4 years I have been fortunate to find the career I love. I've met some remarkable achievments in my digital products growth. I'm ready to return home and spend time with my family while continueing to master my </div>
+          <div class="text">&#9935; Approach </div>
+          <div class="text2">I bring a disciplined approach to software development, from feature scope and prioritization to product lifecycle, I would work carefully with you to make sure ASC digital products are on a long-term trajectory.  <br><br>This approach requires a deep understanding of the patrons and guests that use ASC products. After meeting you I know I couldn't ask for a better leader to understand the ASC guest and their journey. committing resources to their exceeding their expectations. After understanding the customers, we would buiold consensus with our team to make sure all stakeholders are bought in to the development.</div>
         </div>
         <div class="mySlides fade">
-          <img src="http://tommyhuntsman.com/unnamed-13.jpg" style="width:100%">
-          <div class="text">&#128241; Digital Product Skills</div>
+          <img src="http://tommyhuntsman.com/Screen Shot 2019-11-03 at 4.55.11 PM.png" style="width:100%">
+          <div class="text">&#128197; Timing</div>
+          <div class="text2"> I'm excited to move home from California to be with family young and old.<br><br>We are lucky to be software managers. Not everyone is fortunate to find a career they love. In the ensuing months, I intend to move back in Colorado to be around family. I am looking at companies all over Colorado, but I do have 2 nephews in Carbondale that I would be grateful to see more. Working for you would give me the priceless opportunity to be around my changing family.</div>
         </div>
         <div class="mySlides fade">
-          <img src="http://tommyhuntsman.com/unnamed-13.jpg" style="width:100%">
-          <div class="text">&#9935; Long Term Trajectory </div>
-        </div>
-        <div class="mySlides fade">
-          <img src="http://tommyhuntsman.com/unnamed-13.jpg" style="width:100%">
+          <img src="http://tommyhuntsman.com/boardroom.png" style="width:100%">
           <div class="text">&#128156; Team</div>
+          <div class="text2">I genuinely respect your decision to explore other candidates, but I can't help but think we would be an incredible team.<br><br>I want to work for you and help you manage your Digital Product portfolio. I'm excited by all of your products and would gladly manage or own the products you want me to. I'm excited to get to know you and understand how I can make your job better :)</div>
         </div>
-        <a class="prev" onclick="plusSlides(-1)"></a>
-        <a class="next" onclick="plusSlides(1)"></a>
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
       </div>
     </div>
   </div>
 </div>
-</html>
